# guix-guile-example

./: CMakeLists.txt  Makefile.in  README.md  configure.ac  main.scm  simple-guile.c
